<resources>
    <string name="app_name">Wall HD</string>
    <string name="home">Home</string>
    <string name="favourite">Favourite</string>
    <string name="me">Me</string>
    <string name="Upload">upload</string>
    <string name="choose_a_wallpaper">Choose a wallpaper</string>
    <string name="upload">Upload</string>
    <string name="choose_a_category">Choose a category</string>
    <string name="choose_cat_dialog">ChooseCategoryDialog</string>
    <string name="no_file_selected">No file is selected</string>
    <string name="uplaoded_successfully">Wallpaper upload successfully</string>
    <string name="upload_in_progress">Upload is already in progress</string>
    <string name="please_choose_category">Please choose a category</string>
    <string name="settings">Settings</string>
    <string name="sign_in">Sign In</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>

    <string name="facebook_app_id">1119294221578627</string>
    <string name="fb_login_protocol_scheme">fb1119294221578627</string>
    <string name="my_profile">My profile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">close navigation drawer</string>
    <string name="sign_out">Sign out</string>
    <string name="my_account">My account</string>
    <string name="help_feedback"><![CDATA[Help & feedback]]></string>
    <string name="apply">Apply</string>
    <string name="save">Save</string>
    <string name="share">Share</string>
    <string name="tags">Tags</string>
    <string name="resolution">Resolution</string>
    <string name="size">Size</string>
    <string name="search">Search</string>

    <string name="app_label"></string>
    <string name="search_hint">Search Wallpaper</string>
    <string name="apply_dialog_box">ApplyDialogBox</string>
    <string name="applying_please_wait">Applying, please wait…</string>
    <string name="please_wait">Please wait…</string>
    <string name="please_sign_in_to_see_your_favourite_walls">Please, sign in to see your favourite walls</string>
    <string name="search_history">Search history</string>
    <string name="cancel">Cancel</string>
    <string name="clear">Clear</string>
    <string name="view_full">View</string>
    <string name="download_again">Download again</string>
    <string name="no_connection">No connection</string>
    <string name="connection_available">Connection available</string>
    <string name="check_connection">Check your internet connection!</string>
    <string name="follow_on">Follow on</string>
    <string name="unsplash">Unsplash</string>
    <string name="instagram">Instagram</string>
    <string name="share_apk">Share apk</string>
    <string name="enter_desc">Description:</string>
    <string name="enter_a_title">Title:</string>
    <string name="rate_me">Rate me:</string>
    <string name="your_suggestions">Your suggestions (Optional): </string>
    <string name="submit">Submit</string>
    <string name="sending" />
    <string name="submitting" />
    <string name="send_help">Send</string>
    <string name="swipe_down">Swipe down to refresh</string>
    <string name="skip">Skip</string>
    <string name="get_started">Get started</string>
    <string name="favourites_is_empty">Favourites is empty...</string>
</resources>
