<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group >
        <item
            android:id="@+id/myAccountNavMenu"
            android:icon="@drawable/ic_person"
            android:title="@string/my_account" />

        <item
            android:id="@+id/settingsNavMenu"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />

        <item
            android:id="@+id/helpAndFeedbackNavMenu"
            android:icon="@drawable/ic_help_black_24dp"
            android:title="@string/help_feedback" />

        <item
            android:id="@+id/shareAPK"
            android:icon="@drawable/ic_share_black_24dp"
            android:title="@string/share_apk" />


        <item
            android:id="@+id/signOutNavMenu"
            android:icon="@drawable/ic_logout"
            android:title="@string/sign_in" />
    </group>

</menu>