<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/titleInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/enter_a_title"
        android:labelFor="@+id/titleInputEditText"
        android:theme="@style/TextLabel"
        app:boxStrokeColor="@color/iconColor"
        app:counterEnabled="true"
        app:counterMaxLength="120"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/titleInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textAppearance="@android:style/TextAppearance.Large" />


    </android.support.design.widget.TextInputLayout>

    <View
        android:id="@+id/horizontalLine"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/titleInputLayout"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="#C2C2C2"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/horizontalLine"
        android:layout_marginBottom="64dp"
        android:hint="@string/enter_desc"
        android:labelFor="@+id/descInputEditText"
        android:theme="@style/TextLabel"
        app:boxStrokeColor="@color/iconColor"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/descInputEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start"
            android:inputType="textMultiLine"
            android:textAppearance="@android:style/TextAppearance.Medium" />

    </android.support.design.widget.TextInputLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <android.support.design.button.MaterialButton
            android:id="@+id/sendHelpButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/send_help"
            android:textColor="@color/colorPrimary"
            app:backgroundTint="#5B0AA3" />

        <ProgressBar
            android:id="@+id/sendingProgressBar"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:scrollbarFadeDuration="@android:integer/config_shortAnimTime"
            android:theme="@style/ProgressBarWhite"
            android:visibility="visible"
            android:elevation="16dp"/>



    </FrameLayout>


</RelativeLayout>