<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/signedInRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/emptyFavListTextView"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/favourites_is_empty"
            android:textSize="24sp" />

        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/swipeRefreshLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerViewWallpaper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp" />

        </android.support.v4.widget.SwipeRefreshLayout>


        <ProgressBar
            android:id="@+id/wallpaperProgressBarCenter"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:scrollbarFadeDuration="@android:integer/config_mediumAnimTime"
            android:theme="@style/ProgressBar"
            android:visibility="visible" />

        <ProgressBar
            android:id="@+id/wallpaperProgressBarBelowRV"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_below="@+id/swipeRefreshLayout"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginBottom="52dp"
            android:scrollbarFadeDuration="@android:integer/config_mediumAnimTime"
            android:theme="@style/ProgressBar"
            android:visibility="visible" />


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/notSignedInRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/needToSignInTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="16dp"
            android:gravity="center"
            android:text="@string/please_sign_in_to_see_your_favourite_walls"
            android:textColor="@color/textColor"
            android:textSize="24sp" />

        <android.support.design.button.MaterialButton
            android:id="@+id/signInButtonFav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/needToSignInTextView"
            android:layout_centerInParent="true"
            android:layout_margin="4dp"
            android:backgroundTint="@color/colorPrimary"
            android:padding="4dp"
            android:text="@string/sign_in"
            android:textColor="@color/textColor"
            android:textSize="16sp" />

    </RelativeLayout>

</FrameLayout>