<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/wallpaperActivityRootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activityBackgroundColor"
    android:fitsSystemWindows="true"
    tools:context=".activity.WallpaperActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbarWallpaper"
            style="@style/AppTheme"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/PopupTheme" />

    </android.support.design.widget.AppBarLayout>


    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerViewWallpaper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    </android.support.v4.widget.SwipeRefreshLayout>

    <ProgressBar
        android:id="@+id/wallpaperProgressBarCenter"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_gravity="center"
        android:scrollbarFadeDuration="@android:integer/config_mediumAnimTime"
        android:theme="@style/ProgressBar"
        android:visibility="visible" />

    <ProgressBar
        android:id="@+id/wallpaperProgressBarBelowRV"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_gravity="center_horizontal"
        android:scrollbarFadeDuration="@android:integer/config_mediumAnimTime"
        android:theme="@style/ProgressBar"
        android:visibility="visible"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <android.support.v7.widget.CardView
        android:id="@+id/internetStatusCardView"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_gravity="bottom"
        android:backgroundTint="@android:color/white"
        android:elevation="8dp"
        android:foreground="@drawable/rectangle_frame"
        android:translationY="32dp">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/internetStatusAppCompatText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/no_connection"
            android:textSize="16sp" />

    </android.support.v7.widget.CardView>

    <LinearLayout
        android:id="@+id/noConnectionLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:alpha="0"
        android:orientation="vertical"
        android:visibility="gone">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/somethingWentWrongTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="8dp"
            android:text="@string/check_connection"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/swipeDownTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="8dp"
            android:text="@string/swipe_down"
            android:textColor="@android:color/black"
            android:textSize="16sp" />


    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>