<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/wallpaperViewCoordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context=".activity.WallpaperViewActivity">

    <!--<android.support.v7.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:layout_gravity="start"
        android:background="@color/colorTint"/>-->

    <!-- <android.support.design.widget.FloatingActionButton
         android:id="@+id/finishActivityFAB"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
         android:layout_marginTop="24dp"
         android:elevation="8dp"
         android:src="@drawable/dismiss_black"
         app:backgroundTint="#2FFF" />
 -->
    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/finishActivityImageView"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:elevation="16dp"
        android:src="@drawable/custom_transparent_background" />

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="0dp">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="0dp"
            app:expandedTitleGravity="top"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <FrameLayout
                android:id="@+id/wallpaperViewFrameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.5">

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/wallpaperViewImageView"
                    android:layout_width="match_parent"
                    android:layout_height="540dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/splash_screen"
                    android:transitionName="imageView"
                    app:layout_collapseMode="parallax"
                    app:layout_collapseParallaxMultiplier="0.5" />

                <ProgressBar
                    android:id="@+id/wallpaperImageLoadProgressBar"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:scrollbarFadeDuration="@android:integer/config_shortAnimTime"
                    android:theme="@style/ProgressBar"
                    android:visibility="visible" />

            </FrameLayout>


            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbarWallpaperView"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="24dp"
                android:elevation="0dp"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/PopupTheme" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/wallpaperViewNestedScroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/descriptionTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="Beach road"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/photographerHotlinkTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:padding="8dp"
                android:text="Black goku on unsplash"
                android:textColor="@android:color/black"
                android:textSize="16sp" />


            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/lightgrey" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:weightSum="4">

                <LinearLayout
                    android:id="@+id/viewLinearLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="?android:attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <android.support.v7.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:src="@drawable/ic_aspect_ratio_black_24dp" />

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/view_full"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/applyLinearLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="?android:attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <android.support.v7.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:src="@drawable/ic_image_black_24dp" />

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/apply"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/saveLinearLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="?android:attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:orientation="vertical">

                    <android.support.v7.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:src="@drawable/ic_file_download_black_24dp" />

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/save"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/shareLinearLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="?android:attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:orientation="vertical">

                    <android.support.v7.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:src="@drawable/ic_share_black_24dp" />

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/share"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />


                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginBottom="8dp"
                android:background="@color/lightgrey" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/descriptionTagsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/tags"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/resolutionTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/resolution"
                        android:textColor="@android:color/black"
                        android:textSize="20sp" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/widthAndHeightTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="1920 x 1080"
                        android:textColor="@android:color/black"
                        android:textSize="20sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/imageSizeTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/size"
                        android:textColor="@android:color/black"
                        android:textSize="20sp" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/sizeValueTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="2.2 MB"
                        android:textColor="@android:color/black"
                        android:textSize="20sp" />

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/addFavFloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:elevation="8dp"
        android:soundEffectsEnabled="true"
        android:transitionName="floatingActionButton"
        app:backgroundTint="@android:color/white"
        app:fabSize="normal"
        app:layout_anchor="@+id/collapsingToolbarLayout"
        app:layout_anchorGravity="end|bottom"
        app:pressedTranslationZ="16dp" />

    <android.support.v7.widget.CardView
        android:id="@+id/internetStatusCardView"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_gravity="bottom"
        android:backgroundTint="@android:color/white"
        android:elevation="8dp"
        android:foreground="@drawable/rectangle_frame"
        android:translationY="32dp">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/internetStatusAppCompatText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/no_connection"
            android:textSize="16sp" />

    </android.support.v7.widget.CardView>

</android.support.design.widget.CoordinatorLayout>